--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -13,20 +13,10 @@
     
     <h4>Name: {{ name }}</h4> 
     <h4>Class: {{ class }}</h4>
+    <h4>Student ID: {{ student_id }}</h4>
     <hr>
 
-    <!-- if there's a product available -->
-    {% if products %} 
-        {% for product in products %}
-            <h3>Product {{ forloop.counter }} - {{ product.name }}</h3>
-            <ul>
-                <li>Name: {{ product.name }}</li>
-                <li>Amount: {{ product.amount }}</li>
-                <li>Price: Rp.{{ product.price }},-</li>
-                <li>Date added: {{ product.date_added }}</li>
-                <li>Description: {{ product.description }}</li>
-            </ul>
-        {% endfor %}
-    {% endif %}
+    <p>Note: <br>
+        - add "products/" to the current url if you'd like to see all available products and its details on this vending machine</p>
 </body>
 </html>
