--- a/templates/base.html
+++ b/templates/base.html
@@ -9,9 +9,15 @@
         />
         {% block meta %}
         {% endblock meta %}
-
-        {% block style %}
-        {% endblock style %}
+        
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        
+        <style>
+            body {
+                margin: 25px;
+            }
+        </style>
+    
     </head>
 
     <body>
