--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -1,45 +1,44 @@
 {% extends 'base.html' %}
 
 {% block meta %}
-    <title>Login</title>
+<title>Login</title>
 {% endblock meta %}
 
 {% block content %}
+<div class="login">
+    <div class="container centered">
+        <div class="row d-flex justify-content-center align-items-center">
+            <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+                <div class="card shadow-2-strong" style="border-radius: 2rem;">
+                    <div class="card-body p-5">
+                        <h1 class="mb-5 text-center black">Login</h1>
 
-<div class = "login">
+                        <form method="POST" action="">
+                            {% csrf_token %}
+                                <label class="form-label black">Username:</label>
+                                <input type="text" name="username" placeholder="Username" class="mb-4 form-control form-control-lg">
+                                
+                                <label class="form-label black">Password:</label>
+                                <input type="password" name="password" placeholder="Password" class="mb-5 form-control form-control-lg">
+                                
+                                <input class="btn login_btn btn-lg btn-secondary btn-block  mb-4" type="submit" value="Login">
+                        </form>
 
-    <h1>Login</h1>
+                        {% if messages %}
+                            <ul> 
+                                {% for message in messages %}
+                                    <li class="text-center" style="color: red;">{{ message }}</li>
+                                {% endfor %}
+                            </ul>
+                        {% endif %}
 
-    <form method="POST" action="">
-        {% csrf_token %}
-        <table>
-            <tr>
-                <td>Username: </td>
-                <td><input type="text" name="username" placeholder="Username" class="form-control"></td>
-            </tr>
-                    
-            <tr>
-                <td>Password: </td>
-                <td><input type="password" name="password" placeholder="Password" class="form-control"></td>
-            </tr>
-
-            <tr>
-                <td></td>
-                <td><input class="btn login_btn" type="submit" value="Login"></td>
-            </tr>
-        </table>
-    </form>
-
-    {% if messages %}
-        <ul>
-            {% for message in messages %}
-                <li>{{ message }}</li>
-            {% endfor %}
-        </ul>
-    {% endif %}     
-        
-    Don't have an account yet? <a href="{% url 'main:register' %}">Register Now</a>
-
+                        <p class="text-center black">Don't have an account yet? 
+                            <a href="{% url 'main:register' %}">Register Now</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-
 {% endblock content %}
