--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -1,34 +1,54 @@
 {% extends 'base.html' %}
 
 {% block meta %}
-    <title>Register</title>
+<title>Register</title>
 {% endblock meta %}
 
 {% block content %}  
+<div class="login">
+    <div class="container centered">
+        <div class="row d-flex justify-content-center align-items-center">
+            <div class="card shadow-2-strong" style="border-radius: 2rem;">
+                <div class="card-body p-5">
+                    <h1 class="mb-5 text-center black">Register</h1>
 
-<div class = "login">
-    
-    <h1>Register</h1>  
+                    <form method="POST" action="">
+                        {% csrf_token %}
+                        {% for field in form %}
+                        <p>
+                            <div style="display:table-row;" class="row">
+                                <div style="display:table-cell; vertical-align:middle; text-align:left;" class="col-sm-6 black">
+                                    {{field.label_tag}}
+                                </div>      
+                                <div style="display:table-cell; vertical-align:middle; text-align:right;" class="col-sm-6 black">
+                                    {{field}}
+                                </div>
+                            </div>
 
-        <form method="POST" >  
-            {% csrf_token %}  
-            <table>  
-                {{ form.as_table }}  
-                <tr>  
-                    <td></td>
-                    <td><input type="submit" name="submit" value="Daftar"/></td>  
-                </tr>  
-            </table>  
-        </form>
+                            {% if field.errors %}
+                            <ul class="errorlist">
+                                {% for error in field.errors %}
+                                <li style="color: red;">{{ error }}</li>
+                                {% endfor %}
+                            </ul>
+                            {% endif %}
+                        </p>
+                        {% endfor %}
 
-    {% if messages %}  
-        <ul>   
-            {% for message in messages %}  
-                <li>{{ message }}</li>  
-                {% endfor %}  
-        </ul>   
-    {% endif %}
+                        <input type="submit" class="btn btn-lg btn-secondary btn-block mt-4" name="submit" value="Register"/>
+                    </form>
 
-</div>  
-
+                    {% if messages %}
+                        <ul> 
+                            {% for message in messages %}
+                                <li class="text-center" style="color: red;">{{ message }}</li>
+                            {% endfor %}
+                        </ul>
+                    {% endif %}
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock content %}
