--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,11 @@
                 background-color: rgb(23, 23, 23);
                 color: rgb(230, 230, 230);
             }
-
+            
+            hr {
+                background-color: rgb(230, 230, 230);
+            }        
+            
             body > div {
                 margin: 20px;
             }
@@ -28,8 +32,13 @@
                 transform: translate(-50%, -50%);
             }
 
-            hr {
-                background-color: rgb(230, 230, 230);
+            .card-title {
+                margin: 25px 0px 0px 0px;
+            }
+
+            .card {                    
+                align-items: center;
+                border-radius: 25px;
             }
 
             .black {
