--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
         {% endblock meta %}
         
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <!-- <link rel="stylesheet" href="{% static 'base.css' %}"> -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
         
@@ -16,15 +17,15 @@
                 background-color: rgb(23, 23, 23);
                 color: rgb(230, 230, 230);
             }
-            
+
             hr {
                 background-color: rgb(230, 230, 230);
             }        
-            
+
             body > div {
                 margin: 20px;
             }
-            
+
             .centered {
                 position: fixed;
                 top: 50%;
@@ -32,13 +33,14 @@
                 transform: translate(-50%, -50%);
             }
 
-            .card-title {
-                margin: 25px 0px 0px 0px;
-            }
-
             .card {                    
                 align-items: center;
                 border-radius: 25px;
+            }
+
+            .card-title {
+                margin: 25px 0px 0px 0px;
+                width: 16rem;
             }
 
             .black {
@@ -49,7 +51,6 @@
                 color: rgb(230, 230, 230);
             }
         </style>
-    
     </head>
 
     <body>
